--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,11 @@
-</!DOCTYPE html>
-<html>
-<head>
-	<title>Hello Coursera!</title>
-</head>
-<body>
-<h1>Hello Coursera! It's a great course!</h1>
-</body>
-</html>
+<!DOCTYPE html>
+ <html>
+ <head>
+ 	<meta charset="utf-8">
+ 	<title> Coursera is Cool!</title>
+ </head>
+ <body>
+ <body bgcolor=FF00FF>
+<div> <p>Coursera is so COOL!</p> </div> <div>I'm learning <span>SO </span> much!</p> </div>
+ </body>
+ </html>
