--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,8 @@
  	<title> Coursera is Cool!</title>
  </head>
  <body>
- <body bgcolor=FF00FF>
+ <body bgcolor=0000FF>
 <div> <p>Coursera is so COOL!</p> </div> <div>I'm learning <span>SO </span> much!</p> </div>
+<img src "DarkRose.gif">
  </body>
  </html>
